add new function "name find"